test/analyze/type_check/type_parameters/type_alias_with_bounds_error.myte
module test

trait Foo {}
trait Bar {}

type alias Baz<T: Foo & Bar> = T

fun main() {}